RESOLVED FIXED 133316
[GTK] Adds stubs for all subtle crypto algorithm implemntations
https://bugs.webkit.org/show_bug.cgi?id=133316
Summary [GTK] Adds stubs for all subtle crypto algorithm implemntations
Eduardo Lima Mitev
Reported 2014-05-27 11:58:33 PDT
[GTK] Adds stubs for all subtle crypto algorithm implemntations
Attachments
Patch (35.57 KB, patch)
2014-05-27 11:59 PDT, Eduardo Lima Mitev
no flags
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 (526.93 KB, application/zip)
2014-05-27 13:02 PDT, Build Bot
no flags
Patch (35.57 KB, patch)
2014-05-28 03:14 PDT, Eduardo Lima Mitev
no flags
Patch (37.69 KB, patch)
2014-05-28 09:38 PDT, Eduardo Lima Mitev
no flags
Patch (37.52 KB, patch)
2014-08-08 02:52 PDT, Eduardo Lima Mitev
no flags
Patch (37.52 KB, patch)
2014-08-08 04:46 PDT, Eduardo Lima Mitev
no flags
Patch (36.05 KB, patch)
2014-08-11 01:07 PDT, Eduardo Lima Mitev
no flags
Eduardo Lima Mitev
Comment 1 2014-05-27 11:59:26 PDT
WebKit Commit Bot
Comment 2 2014-05-27 12:01:50 PDT
Attachment 232141 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] ERROR: Source/WebCore/CMakeLists.txt:30: There should be exactly one empty line instead of 0 between "inspector" and "loader/appcache". [list/emptyline] [5] Total errors found: 2 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 3 2014-05-27 13:02:29 PDT
Comment on attachment 232141 [details] Patch Attachment 232141 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6696170550198272 New failing tests: media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 4 2014-05-27 13:02:33 PDT
Created attachment 232148 [details] Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Eduardo Lima Mitev
Comment 5 2014-05-28 03:14:35 PDT
WebKit Commit Bot
Comment 6 2014-05-28 03:15:43 PDT
Attachment 232184 [details] did not pass style-queue: ERROR: Source/WebCore/CMakeLists.txt:30: There should be exactly one empty line instead of 0 between "inspector" and "loader/appcache". [list/emptyline] [5] Total errors found: 1 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eduardo Lima Mitev
Comment 7 2014-05-28 03:23:46 PDT
(In reply to comment #6) > Attachment 232184 [details] did not pass style-queue: > > ERROR: Source/WebCore/CMakeLists.txt:30: There should be exactly one empty line instead of 0 between "inspector" and "loader/appcache". [list/emptyline] [5] > Total errors found: 1 in 17 files > I think this is a false positive. The patch has nothing to do with the error mentioned. The occurrence of "inspector" and "loader/appcache" happens at lines 545 and 547 (not 30), and there is an empty line between them.
Eduardo Lima Mitev
Comment 8 2014-05-28 09:38:39 PDT
WebKit Commit Bot
Comment 9 2014-05-28 09:40:43 PDT
Attachment 232204 [details] did not pass style-queue: ERROR: Source/WebCore/CMakeLists.txt:30: There should be exactly one empty line instead of 0 between "inspector" and "loader/appcache". [list/emptyline] [5] Total errors found: 1 in 18 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eduardo Lima Mitev
Comment 10 2014-05-28 13:21:34 PDT
(In reply to comment #9) > Attachment 232204 [details] did not pass style-queue: > > > ERROR: Source/WebCore/CMakeLists.txt:30: There should be exactly one empty line instead of 0 between "inspector" and "loader/appcache". [list/emptyline] [5] > Total errors found: 1 in 18 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. Opened bug 133354 to follow up with this style error.
Philippe Normand
Comment 11 2014-07-15 02:29:40 PDT
Comment on attachment 232204 [details] Patch Looks good but please replace the "Unimplemented" comments with notImplemented() calls :)
Eduardo Lima Mitev
Comment 12 2014-08-08 02:52:57 PDT
WebKit Commit Bot
Comment 13 2014-08-08 02:55:14 PDT
Attachment 236274 [details] did not pass style-queue: ERROR: Source/WebCore/CMakeLists.txt:32: Alphabetical sorting problem. "page" should be before "loader/appcache". [list/order] [5] Total errors found: 1 in 18 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eduardo Lima Mitev
Comment 14 2014-08-08 04:46:38 PDT
WebKit Commit Bot
Comment 15 2014-08-08 04:49:06 PDT
Attachment 236277 [details] did not pass style-queue: ERROR: Source/WebCore/CMakeLists.txt:32: Alphabetical sorting problem. "page" should be before "loader/appcache". [list/order] [5] Total errors found: 1 in 18 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 16 2014-08-11 00:12:56 PDT
Comment on attachment 236277 [details] Patch Rejecting attachment 236277 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 236277, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: cmake/WebKitFeatures.cmake Hunk #1 FAILED at 106. 1 out of 1 hunk FAILED -- saving rejects to file Source/cmake/WebKitFeatures.cmake.rej patching file Source/cmakeconfig.h.cmake Hunk #1 FAILED at 96. 1 out of 1 hunk FAILED -- saving rejects to file Source/cmakeconfig.h.cmake.rej patching file ChangeLog Hunk #1 succeeded at 1 with fuzz 3. Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Philippe Normand']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.appspot.com/results/4782779388657664
Eduardo Lima Mitev
Comment 17 2014-08-11 01:07:27 PDT
WebKit Commit Bot
Comment 18 2014-08-11 01:14:18 PDT
Attachment 236355 [details] did not pass style-queue: ERROR: Source/WebCore/CMakeLists.txt:33: Alphabetical sorting problem. "page" should be before "loader/appcache". [list/order] [5] Total errors found: 1 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 19 2014-08-11 01:59:36 PDT
Comment on attachment 236355 [details] Patch Clearing flags on attachment: 236355 Committed r172389: <http://trac.webkit.org/changeset/172389>
WebKit Commit Bot
Comment 20 2014-08-11 01:59:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.