Source/WebCore/PlatformGTK.cmake
@@ -785,3 +785,41 @@ list(REMOVE_ITEM GObjectDOMBindings_GIR_HEADERS
 
 # Propagate this variable to the parent scope, so that it can be used in other parts of the build.
 set(GObjectDOMBindings_GIR_HEADERS ${GObjectDOMBindings_GIR_HEADERS} PARENT_SCOPE)
+
+if (ENABLE_SUBTLE_CRYPTO)
+    list(APPEND WebCore_SOURCES
+        crypto/CryptoAlgorithm.cpp
+        crypto/CryptoAlgorithmDescriptionBuilder.cpp
+        crypto/CryptoAlgorithmRegistry.cpp
+        crypto/CryptoKey.cpp
+        crypto/CryptoKeyPair.cpp
+        crypto/SubtleCrypto.cpp
+        crypto/algorithms/CryptoAlgorithmAES_CBC.cpp
+        crypto/algorithms/CryptoAlgorithmAES_KW.cpp
+        crypto/algorithms/CryptoAlgorithmHMAC.cpp
+        crypto/algorithms/CryptoAlgorithmRSAES_PKCS1_v1_5.cpp
+        crypto/algorithms/CryptoAlgorithmRSA_OAEP.cpp
+        crypto/algorithms/CryptoAlgorithmRSASSA_PKCS1_v1_5.cpp
+        crypto/algorithms/CryptoAlgorithmSHA1.cpp
+        crypto/algorithms/CryptoAlgorithmSHA224.cpp
+        crypto/algorithms/CryptoAlgorithmSHA256.cpp
+        crypto/algorithms/CryptoAlgorithmSHA384.cpp
+        crypto/algorithms/CryptoAlgorithmSHA512.cpp
+        crypto/keys/CryptoKeyAES.cpp
+        crypto/keys/CryptoKeyDataOctetSequence.cpp
+        crypto/keys/CryptoKeyDataRSAComponents.cpp
+        crypto/keys/CryptoKeyHMAC.cpp
+        crypto/keys/CryptoKeySerializationRaw.cpp
+
+        crypto/gtk/CryptoAlgorithmRegistryGtk.cpp
+        crypto/gtk/CryptoAlgorithmAES_CBCGtk.cpp
+        crypto/gtk/CryptoAlgorithmAES_KWGtk.cpp
+        crypto/gtk/CryptoAlgorithmHMACGtk.cpp
+        crypto/gtk/CryptoAlgorithmRSAES_PKCS1_v1_5Gtk.cpp
+        crypto/gtk/CryptoAlgorithmRSA_OAEPGtk.cpp
+        crypto/gtk/CryptoAlgorithmRSASSA_PKCS1_v1_5Gtk.cpp
+        crypto/gtk/CryptoDigestGtk.cpp
+        crypto/gtk/CryptoKeyRSAGtk.cpp
+        crypto/gtk/SerializedCryptoKeyWrapGtk.cpp
+    )
+endif ()
